MouseInput and Bounding

--- a/Engine4/Engine4.vcxproj
+++ b/Engine4/Engine4.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="Engine\Core\Scene.h" />
     <ClInclude Include="Engine\Core\Timer.h" />
     <ClInclude Include="Engine\Core\Window.h" />
+    <ClInclude Include="Engine\Math\BoundingBox.h" />
     <ClInclude Include="Engine\Rendering\3D\GameObject.h" />
     <ClInclude Include="Engine\Events\EventListener.h" />
     <ClInclude Include="Game\Game1.h" />
