--- a/Engine4/Engine4.vcxproj.filters
+++ b/Engine4/Engine4.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClInclude Include="Engine\Events\EventListener.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Math\BoundingBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\Shaders\ColourFragmentShader.glsl" />
